--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>BabySaplimgX</title>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BabySaplimgX</title>
+    <link href="assets/Favicon.ico" rel="icon">
+    <link href="assets/Favicon.ico" rel="image">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="ToetMats - Coole website">
+    <meta property="og:image"
+          content="https://static-cdn.jtvnw.net/jtv_user_pictures/2c72bd48-0626-40a3-8ac4-becd0c5a4f4c-profile_banner-480.png">
+    <meta property="og:url" content="https://toetmats.nl">
+    <meta property="og:site_name" content="ToetMats - Coolste Site Op aarde">
+    <meta property="og:description" content="Ratekats ik ben mats">
+    <meta name="twitter:title" content="Ratekats ik ben mats">
+    <meta name="twitter:image"
+          content="https://static-cdn.jtvnw.net/jtv_user_pictures/2c72bd48-0626-40a3-8ac4-becd0c5a4f4c-profile_banner-480.png">
+    <meta name="twitter:url" content="https://twitter.com/Mindgamesnl">
+    <meta name="twitter:card" content="summary">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
+          integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+
+    <style>
+        .subscriber {
+            background: linear-gradient(
+                    to right,
+                    hsl(98 100% 62%),
+                    hsl(204 100% 59%)
+            );
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-align: center;
+        }
+
+        @media (min-width: 1536px) {
+            .stats  {
+                max-width: 90% !important;
+            }
+        }
+
+    </style>
 </head>
 
 <body>
