--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BabySaplimgX</title>
-    <link href="assets/Favicon.ico" rel="icon">
-    <link href="assets/Favicon.ico" rel="image">
+    <link href="assets/Favicon.png" rel="icon">
+    <link href="assets/Favicon.png" rel="image">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
 
