--- a/404.html
+++ b/404.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
-	<iframe src="https://player.twitch.tv/?channel=babysaplimgxwatchtwitch&parent=https://www.babysaplimgx.ml/404.html" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+	<iframe 
+		src="https://player.twitch.tv/?channel=babysaplimgxwatchtwitch&parent=www.babysaplimgx.ml/404.html" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
+	</iframe>
 </body>
 </html>
