--- a/404.html
+++ b/404.html
@@ -6,8 +6,10 @@
 </head>
 
 <body>
-	<iframe 
-		src="https://player.twitch.tv/?channel=babysaplimgxwatchtwitch&parent=www.babysaplimgx.ml/404.html" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620">
-	</iframe>
+	
+	
+	<iframe src="https://embed.twitch.tv?channel=babysaplimgxwatchtwitch&amp;height=480&amp;layout=video&amp;parent=babysaplimgx.ml&amp;referrer=https%3A%2F%2Fbabysaplimgx.ml%2F&amp;width=854" allowfullscreen="" scrolling="no" frameborder="0" allow="autoplay; fullscreen" title="Twitch" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox" width="854" height="480"></iframe>
+	
+	
 </body>
 </html>
