--- a/zukilive.html
+++ b/zukilive.html
@@ -20,7 +20,7 @@
           <div class="container"><img class="img-fluid pr-3 aa-logo-img" src="images/zuki.png" alt="logo"><a class="navbar-brand px-0 py-0" href="https://www.zukilive.ml/">ZukiLive</a>
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.zukilive.ml/">Home</a></li>
+                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.babysaplimgx.ml/zukilive">Home</a></li>
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.twitch.tv/ZukiLive">Twitch</a></li>
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.instagram.com/zukilive/">Instagram</a></li>
 				<li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.youtube.com/channel/UCX9KEmuV6U-arJ6Vc4cl6PQ">Youtube</a></li>
