--- a/zukilive.html
+++ b/zukilive.html
@@ -17,7 +17,7 @@
     <header>
       <div class="aa-header">
         <nav class="navbar navbar-expand-md navbar-transparent">
-          <div class="container"><img class="img-fluid pr-3 aa-logo-img" src="images/zuki.png" alt="logo"><a class="navbar-brand px-0 py-0" href="https://www.zukilive.ml/">ZukiLive</a>
+          <div class="container"><img class="img-fluid pr-3 aa-logo-img" src="images/zuki.png" alt="logo"><a class="navbar-brand px-0 py-0" href="https://www.babysaplimgx.ml/zukilive">ZukiLive</a>
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.babysaplimgx.ml/zukilive">Home</a></li>
