--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.instagram.com/babysaplimgx/">Instagram</a></li>
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://twitter.com/gdk2007">Twitter</a></li>
 				<li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.youtube.com/channel/UCFB8_6salz-ffCpbif7JcIg">Youtube</a></li>
-				                  <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.babysaplimgx/zukilive">ZukiLive</a></li>
+				                  <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.babysaplimgx.ml/zukilive">ZukiLive</a></li>
               </ul>
             </div>
           </div>
