--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@ body {
     <header>
       <div class="aa-header">
         <nav class="navbar navbar-expand-md navbar-transparent">
-          <div class="container"><img class="img-fluid pr-3 aa-logo-img" src="images/Favicon.png" alt="logo"><a class="navbar-brand px-0 py-0" href="#">BabySaplimgX</a>
+          <div class="container"><img class="img-fluid pr-3 aa-logo-img" src="images/Favicon.png" alt="logo"><a class="glow">SAPLIMGX</a>
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.babysaplimgx.ml">Home</a></li>
-                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.twitch.tv/BabySaplimgX">Twitch</a></li>
+                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.saplimgx.ml">Home</a></li>
+                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.twitch.tv/SaplimgX">Twitch</a></li>
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.instagram.com/babysaplimgx/">Instagram</a></li>
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://twitter.com/gdk2007">Twitter</a></li>
 				<li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.youtube.com/channel/UCFB8_6salz-ffCpbif7JcIg">Youtube</a></li>
-				                  <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.babysaplimgx.ml/zukilive">ZukiLive</a></li>
               </ul>
             </div>
           </div>
         </nav>
 	   <h1 class="glow">SAPLIMGX</h1>
+       <div class="col-md-6 col-sm-12 text-right"><img class="img-fluid" src="images/birb.gif" alt="Image"></div>
       </div>
     </header>
     <div class="page-content">
@@ -63,7 +63,7 @@ body {
       <div class="container py-5">
         <div class="row text-center">
           <div class="col-md-12">
-            <p class="mt-3">Copyright &copy; BabySaplimgX. All rights reserved.<br>sinds 2022 - <a class="credit" href="https://www.twitch.tv/babysaplimgx" target="_blank">BabySaplimgX</a></p>
+            <p class="mt-3">Copyright &copy; BabySaplimgX. All rights reserved.<br>sinds 2022 - <a class="credit" href="https://www.twitch.tv/saplimgx" target="_blank">BabySaplimgX</a></p>
           </div>
         </div>
       </div>
