--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<style>
 body {
   background-color: black;
-  font-family: cursive;
+  font-family: milky nice;
 }
 
 .glow {
@@ -53,7 +53,6 @@ body {
             </div>
           </div>
         </nav>
-	   <h1 class="glow">SAPLIMGX</h1>
        <div class="col-md-6 col-sm-12 text-right"><img class="img-fluid" src="images/birb.gif" alt="Image"></div>
       </div>
     </header>
