--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body {
     <header>
       <div class="aa-header">
         <nav class="navbar navbar-expand-md navbar-transparent">
-          <a class="glow">SAPLIMGX</a>
+          <div class="container"><a class="glow">SAPLIMGX</a>
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.saplimgx.ml">Home</a></li>
