--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<style>
 body {
   background-color: black;
-  font-family: milky nice;
+  font-family: milky nice clean;
 }
 
 .glow {
-  font-size: 80px;
+  font-size: 40px;
   color: #fff;
   text-align: center;
   animation: glow 1s ease-in-out infinite alternate;
