--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
       <div class="container py-5">
         <div class="row text-center">
           <div class="col-md-12">
-            <p class="mt-3">Copyright &copy; SaplimgX. All rights reserved.<br>sinds 2022 - <a class="credit" href="https://www.twitch.tv/saplimgx" target="_blank">BabySaplimgX</a></p>
+            <p class="mt-3">Copyright &copy; SaplimgX. All rights reserved.<br>sinds 2022 - <a class="credit" href="https://www.twitch.tv/saplimgx" target="_blank">SaplimgX</a></p>
           </div>
         </div>
       </div>
