--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ body {
           </div>
         </nav>
        <div class="col-md-6 col-sm-12 text-right"><img class="img-fluid" src="images/birb.gif" alt="Image"></div>
+	<iframe src="https://discord.com/widget?id=985517034341294153&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       </div>
     </header>
     <div class="page-content">
