--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {
       </div>
     </header>
     <div class="page-content">
-      <iframe src="https://player.twitch.tv/?channel=saplimgx&parent=babysaplimgx.github.io" frameborder="0" allowfullscreen="true" scrolling="no" height="488" width="800"></iframe>
+      <iframe src="https://player.twitch.tv/?channel=saplimgx&parent=babysaplimgx.github.io" allowfullscreen="" scrolling="no" frameborder="0" allow="autoplay; fullscreen" title="Twitch" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox" width="854" height="480"></iframe>
 	<iframe src="https://discord.com/widget?id=985517034341294153&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     <footer>
       <div class="container py-5">
