--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ body {
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.saplimgx.ml">Home</a></li>
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.twitch.tv/SaplimgX">Twitch</a></li>
-                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.instagram.com/babysaplimgx/">Instagram</a></li>
-                <li class="nav-item"><a class="btn btn-outline-neutral btn-round credit" href="https://twitter.com/gdk2007">Twitter</a></li>
+                <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.instagram.com/SaplimgX/">Instagram</a></li>
+                <li class="nav-item"><a class="btn btn-outline-neutral btn-round credit" href="https://twitter.com/SaplimgX">Twitter</a></li>
 				<li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.youtube.com/channel/UCFB8_6salz-ffCpbif7JcIg">Youtube</a></li>
               </ul>
             </div>
