--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ body {
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.instagram.com/SaplimgX/">Instagram</a></li>
                 <li class="nav-item"><a class="btn btn-outline-neutral btn-round credit" href="https://twitter.com/SaplimgX">Twitter</a></li>
 				<li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="https://www.youtube.com/channel/UCFB8_6salz-ffCpbif7JcIg">Youtube</a></li>
+        <li class="nav-item"><a class="btn btn-outline-neutral btn-round" href="CV.html">School...</a></li>
               </ul>
             </div>
           </div>
