--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	<style>
 </style>
   </head>
-  <body background="images/Coming Soon HTML.mp4">
+  <body>
     <header>
-      
+      <video autoplay="" muted="" loop="" id="myVideo">
+  <source src="images/coming soon raw.mp4" type="video/mp4">
+</video>
     </header>
   </body>
 </html>
