--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <video autoplay="" muted="" loop="" id="myVideo">
-  <source src="images/coming soon raw.mp4" type="video/mp4">
+  <source src="images/Coming_Soon_HTML.mp4" type="video/mp4">
 </video>
     </header>
   </body>
