--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-	<title>SaplimgX | Soon</title>
+<html>
+<head>
+<title>SaplimgX | Soon!</title>
 	<link href="images/Favicon.png" rel="image">
 	<link href="images/Favicon.png" rel="icon">
-	<style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 </style>
-  </head>
-  <body>
-    <header>
-      <video autoplay="" muted="" loop="" id="myVideo">
+</head>
+<body>
+
+<video autoplay muted loop id="myVideo">
   <source src="images/Coming_Soon_HTML.mp4" type="video/mp4">
 </video>
-    </header>
-  </body>
+</body>
 </html>
