--- a/index.html
+++ b/index.html
@@ -6,6 +6,34 @@
 	<link href="images/Favicon.png" rel="icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+	  body {
+    margin: 0;
+    padding: 0;
+    background-color: #222;
+    color: white;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  
+  #overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+  
+  #clock {
+    font-size: 2rem;
+  }
 * {
   box-sizing: border-box;
 }
@@ -20,9 +48,28 @@ video {
 </style>
 </head>
 <body>
+<div id="overlay">
+  <div id="clock">12:34:56</div>
+</div>
 
-<video autoplay muted loop id="myVideo">
-  <source src="images/Coming_Soon_HTML.mp4" type="video/mp4">
-</video>
+<script>
+function updateClock() {
+  const now = new Date();
+  const hours = String(now.getHours()).padStart(2, '0');
+  const minutes = String(now.getMinutes()).padStart(2, '0');
+  const seconds = String(now.getSeconds()).padStart(2, '0');
+  const currentTime = `${hours}:${minutes}:${seconds}`;
+  document.getElementById("clock").textContent = currentTime;
+}
+
+// Update the clock every second
+setInterval(updateClock, 1000);
+</script>
+	<video autoplay muted loop>
+      <source src="./images/Coming_Soon_HTML.mp4" type="video/mp4" />
+    </video>
+<audio id="musicplayer" autoplay>
+  <source src="./images/Wachtmuziek_asbak.mp3" />
+</audio>
 </body>
 </html>
