--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ function updateClock() {
 setInterval(updateClock, 1000);
 </script>
 	<video autoplay muted loop>
-      <source src="./images/Coming_Soon_HTML.mp4" type="video/mp4" />
+      <source src="images/Coming_Soon_HTML.mp4" type="video/mp4" />
     </video>
 <audio id="musicplayer" autoplay>
   <source src="./images/Wachtmuziek_asbak.mp3" />
