--- a/index.html
+++ b/index.html
@@ -68,5 +68,8 @@ setInterval(updateClock, 1000);
 	<video autoplay muted loop>
       <source src="./images/Soon.mp4" type="video/mp4" />
     </video>
+<audio id="musicplayer" autoplay>
+  <source src="./images/Wachtmuziek_asbak.mp3" />
+</audio>
 </body>
 </html>
