--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SaplimgX | Portfolio</title>
+		<link href="images/Favicon.png" rel="image">
+		<link href="images/Favicon.png" rel="icon">
 	<link href="https://fonts.googleapis.com/css2?family=Milky+Nice+Clean&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
