--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Giovanny de Koning / SaplimgX</h1>
-        <p>Doet dingen om tijd te vullen</p>
+        <p>Doet dingen om vrije tijd te vullen</p>
     </header>
 
     <div class="container">
