--- a/scnl.html
+++ b/scnl.html
@@ -9,11 +9,12 @@
 	</style>
 	</head>
 <body>
-<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
-    new Crate({
-        server: '1148190992290299924', // StreamCraftNL | Seizoen 4
-        channel: '1148190994764943407' // #╭・💬・chat
-    })
-</script>
+<widgetbot
+  server="1148190992290299924"
+  channel="1148190994764943407"
+  width="800"
+  height="600"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
 </body>
 </html>
