--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@ function updateClock() {
 // Update the clock every second
 setInterval(updateClock, 1000);
 </script>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-  new Crate({
-    server: '985517034341294153',
-    channel: '999724713725136997'
-  })
+<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '985517034341294153', // Official SaplimgX Server
+        channel: '999724713725136997' // #🔥︱general
+    })
 </script>
 	<video autoplay muted loop>
       <source src="./images/Soon.mp4" type="video/mp4" />
