--- a/aftellen.html
+++ b/aftellen.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Aftelpagina met Muziek</title>
+    <title>SaplimgX | Aftellenk</title>
+	<link href="images/Favicon.png" rel="image">
+	<link href="images/Favicon.png" rel="icon">
     <style>
         body {
             text-align: center;
