--- a/aftellen.html
+++ b/aftellen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SaplimgX | Aftellenk</title>
+    <title>SaplimgX | Aftellen</title>
 	<link href="images/Favicon.png" rel="image">
 	<link href="images/Favicon.png" rel="icon">
     <style>
