--- a/aftellen.html
+++ b/aftellen.html
@@ -7,7 +7,7 @@
     <style>
         body {
             text-align: center;
-            font-family: Arial, sans-serif;
+            font-family: "Milky Nice";
             background-color: #f3f3f3;
             margin: 0;
             padding: 0;
@@ -28,7 +28,7 @@
         }
     </style>
 </head>
-<body>
+<body background="images/aftellen.png">
     <h1>Aftellen tot 20 januari 2024</h1>
     <div id="countdown"></div>
 <p>Klik voor een leuk wachtmuziekje totdat de timer is afgelopen!</p>
