--- a/aftellen.html
+++ b/aftellen.html
@@ -7,7 +7,7 @@
     <style>
         body {
             text-align: center;
-            font-family: "Milky Nice";
+            font-family: 'Milky Nice Clean'
             background-color: #f3f3f3;
             margin: 0;
             padding: 0;
