--- a/aftellen.html
+++ b/aftellen.html
@@ -4,10 +4,10 @@
     <title>SaplimgX | Aftellen</title>
 	<link href="images/Favicon.png" rel="image">
 	<link href="images/Favicon.png" rel="icon">
+	<link rel="stylesheet" href="styles.css">
     <style>
         body {
             text-align: center;
-            font-family: 'Milky Nice';
             background-color: #f3f3f3;
             margin: 0;
             padding: 0;
