--- a/aftellen.html
+++ b/aftellen.html
@@ -30,7 +30,7 @@
 </head>
 <body background="images/aftellen.png">
     <h1>Aftellen tot 20 januari 2024</h1>
-	<p>Thomas??</p>
+	<p>Thomas?? Of toch den dave?</p>
     <div id="countdown"></div>
 <p>Klik voor een leuk wachtmuziekje totdat de timer is afgelopen!</p>
 <audio controls src="images/Wachtmuziek.mp3"></audio>
