--- a/testsite.html
+++ b/testsite.html
@@ -17,7 +17,7 @@
     <section>
         <h2>Onze Content</h2>
         <div class="twitch-embed">
-            <iframe src="https://player.twitch.tv/?channel=saplimgx&parent=https://www.saplimgx.nl" frameborder="0" allowfullscreen="" scrolling="no" height="488" width="800"></iframe>
+            <iframe src="https://player.twitch.tv/?channel=saplimgx&parent=https://www.saplimgx.nl/testsite" frameborder="0" allowfullscreen="" scrolling="no" height="488" width="800"></iframe>
         </div>
         <p>Ontdek meer op <a href="https://www.saplimgx.nl">onze website</a>.</p>
     </section>
