--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-
-	<title>SaplimgX &#8211; SaplimgX ook wel Giovanny genoemd!</title>
+<title>SaplimgX | Soon!</title>
+	<link href="images/Favicon.png" rel="image">
+	<link href="images/Favicon.png" rel="icon">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//fonts.googleapis.com">
 <link rel="alternate" type="application/rss+xml" title="SaplimgX &raquo; feed" href="./feed/index.html">
@@ -210,10 +212,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 			<div id="secondary-menu" class="menu"><ul>
 <li class="page_item page-item-13 current_page_item"><a href="./index.html" aria-current="page">Welkom!</a></li>
 </ul></div>
-		</nav><!-- #site-navigation -->
-				<div class="site-info">
-			<span class="tf analog-powered">Powered by <a href="https://wordpress.org/">WordPress</a></span><span class="tf sep">//</span><span class="tf analog-theme-credits">Theme <strong>AnaLog</strong> by <a href="https://www.iljester.com/">Il Jester</a></span><span class="tf sep">//</span><span class="tf gototop"><a href="#">Top <span class="barw">&barwedge;</span></a></span>		</div>
-<!-- .site-info -->
+		</nav>
 	</footer><!-- #colophon -->
 </div>
 <!-- #page -->
