--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 <div class="wp-block-group is-vertical is-layout-flex wp-container-core-group-layout-1 wp-block-group-is-layout-flex">
 <div class="wp-block-columns is-layout-flex wp-container-core-columns-layout-2 wp-block-columns-is-layout-flex">
 <div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow">
-<iframe loading="lazy" src="https://player.twitch.tv/?channel=saplimgx&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+<iframe src="https://player.twitch.tv/?channel=saplimgx&parent=saplimgx.nl" frameborder="0" allowfullscreen="" scrolling="no" height="378" width="620"></iframe>
 </div>
 </div>
 </div>
@@ -261,9 +261,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 
 	<footer id="colophon" class="site-footer">
 		<div class="my-site-cp"><p>&copy;2023 SaplimgX</p></div>		<nav id="footer-navigation" class="sub-navigation">
-			<div id="secondary-menu" class="menu"><ul>
-<li class="page_item page-item-13 current_page_item"><a href="./index.html" aria-current="page">Welkom!</a></li>
-</ul></div>
 		</nav>
 	</footer><!-- #colophon -->
 </div>
