--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
-<title>SaplimgX | Soon!</title>
+<title>SaplimgX | Heya!</title>
 	<link href="images/Favicon.png" rel="image">
 	<link href="images/Favicon.png" rel="icon">
 <meta name="viewport" content="width=device-width, initial-scale=1">
