--- a/tv.html
+++ b/tv.html
@@ -4,8 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SaplimgX Youtube</title>
+  <meta http-equiv="refresh" content="delay_time; URL=new_website_url" />
 </head>
-<body>
-  <meta http-equiv="refresh" content="delay_time; URL=https://www.youtube.com/@saplimgx" />
-</body>
 </html>
