--- a/tv.html
+++ b/tv.html
@@ -4,6 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>SaplimgX Youtube</title>
-  <meta http-equiv="refresh" content="0"; URL=https://www.youtube.com/@saplimgx" />
+  <meta http-equiv="refresh" content="0; URL=https://www.youtube.com/@saplimgx"/>
 </head>
 </html>
