--- a/kind.html
+++ b/kind.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SaplimgX | Yvo</title>
+<title>SaplimgX | Kind</title>
 	<link href="images/Favicon.png" rel="image">
 	<link href="images/Favicon.png" rel="icon">
 	<link rel="stylesheet" href="styles.css">
